--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,7 +22,8 @@
     MealOrderApp.UserAction = {
         ADD_DISH_TO_ORDER: "ADD_DISH_TO_ORDER",
         ADD_DISH: 'ADD_DISH',
-        REMOVE_DISH: 'REMOVE_DISH',
+        GET_ORDERED_ITEMS: 'GET_ORDERED_ITEMS',
+        REMOVE_DISH_FROM_ORDER: 'REMOVE_DISH_FROM_ORDER',
         REMOVE_DISHES_BY_VENDOR: 'REMOVE_DISHES_BY_VENDOR',
     }
 </script>
