--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -141,7 +141,7 @@
                      *
                      * @typedef {Object} Menu the menu for the current date
                      *
-                     * @property {String} Vendor a vendor name
+                     * @property {String} vendor a vendor name
                      *
                      * @typedef {Object} Date contains day, month, year
                      * @property {Number} day
